# pasu

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.en.md  README.ko.md  README.md  SECURITY.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/skills/: add-audit-sink.md  add-llm-provider.md
.github/workflows/: ci.yml  release.yml
crates/pasu-audit/: Cargo.toml
crates/pasu-audit/examples/: otel_demo.rs
crates/pasu-audit/src/: lib.rs  otel.rs
crates/pasu-cli/: Cargo.toml
crates/pasu-cli/src/: main.rs
crates/pasu-cli/tests/: run_e2e.rs
crates/pasu-core/: Cargo.toml
crates/pasu-core/src/: lib.rs
crates/pasu-daemon/: Cargo.toml
crates/pasu-daemon/src/: main.rs
crates/pasu-ebpf/: Cargo.toml
crates/pasu-ebpf-common/: Cargo.toml
crates/pasu-ebpf/src/: main.rs
crates/pasu-egress/: Cargo.toml  build.rs
crates/pasu-egress/src/: admin.rs  guard.rs  lib.rs  main.rs
crates/pasu-egress/tests/: egress_e2e.rs
crates/pasu-l1/: Cargo.toml
crates/pasu-l1/src/: lib.rs
crates/pasu-proxy/: Cargo.toml
crates/pasu-proxy/benches/: parse.rs
crates/pasu-proxy/src/: inspect.rs  lib.rs  main.rs  parse.rs  proxy.rs  stream.rs
crates/pasu-proxy/tests/: proxy_e2e.rs
crates/pasu-rig/: Cargo.toml
crates/pasu-rig/src/: egress.rs  lib.rs
crates/pasu-rules/: Cargo.toml
crates/pasu-rules/benches/: policy.rs
crates/pasu-rules/src/: lib.rs
crates/pasu-toolgate/: Cargo.toml
crates/pasu-toolgate/src/: lib.rs
crates/pasu-ui/: Cargo.toml
crates/pasu-ui/examples/: ui_demo.rs
crates/pasu-ui/src/: dashboard.rs  lib.rs
deploy/: Dockerfile  demo.sh  docker-compose.yml  rules.yaml
deploy/helm/pasu-egress/: Chart.yaml  values.yaml
deploy/helm/pasu-egress/templates/: NOTES.txt  _helpers.tpl  daemonset.yaml
deploy/k8s/: daemonset.yaml  sidecar.yaml
deploy/proxy/: Dockerfile  k8s-sidecar.yaml
docs/: deployment.md
packaging/: README.md  pasu-egress.service  pasu-egress.toml
