[workspace]
resolver = "2"
members = [
    "crates/pasu-core",
    "crates/pasu-toolgate",
    # Added incrementally (design: docs/repo-structure.md):
    # "crates/pasu-rules",    # RuleEngine impl (borrows Falco)
    # "crates/pasu-egress",   # egress proxy (OSI L7)
    # "crates/pasu-ebpf",     # eBPF (OSI L3/L4, Linux)
    # "crates/pasu-daemon",   # node daemon (egress + ebpf)
    # "crates/pasu-sdk",      # tool gate embedding library
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CharmingGroot/pasu"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
