[workspace]
resolver = "2"
members = [
    "crates/pasu-core",
    "crates/pasu-rig",
    # Added incrementally (design: docs/repo-structure.md):
    # "crates/pasu-rules",    # RuleEngine impl (borrows Falco)
    # "crates/pasu-egress",   # control plane: aya loader + policy map + DNS observe
    # "crates/pasu-ebpf",     # kernel eBPF (cgroup egress, Linux)
    # "crates/pasu-daemon",   # egress daemon binary (systemd, privileged)
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CharmingGroot/pasu"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
