[package]
name = "pasu-ebpf"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
pasu-ebpf-common = { path = "../pasu-ebpf-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "pasu-egress"
path = "src/main.rs"
