[package]
name = "pasu-proxy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
pasu-core = { path = "../pasu-core" }
axum = "0.7"
reqwest = { version = "0.13", default-features = false, features = ["rustls"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
pasu-rules = { path = "../pasu-rules" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tower = { version = "0.5", features = ["util"] }
