[package]
name = "pasu-rules"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pasu-core = { path = "../pasu-core" }
serde = { workspace = true }
serde_yaml = "0.9"

[dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "policy"
harness = false
