[package]
name = "pasu-ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pasu-core = { path = "../pasu-core" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
axum = "0.7"
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time"] }
